--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
-
+  <link rel="shortcut icon" type="image/jpg" href="assets/favicon.png">
 </head>
 
 <body>
