--- a/index.html
+++ b/index.html
@@ -66,10 +66,16 @@
           <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/k3qHCgfWSx0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
+          <p id="comment">
+             In that video I want to show you a frame about my history and how be a Self-Taught made me realize the Equity over Coding and Designing.
+          </p>
+          
           <!--<a href="https://www.notion.so/papodedev/Papo-de-Dev-Master-File-f416159cb634456184a2da808b122600"
             class="link highlight">
             ⭐️ Desafios de CSS
           </a>-->
+
+
           <a id="setup-button" class="link">
             💻 My Setup
           </a>
